--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
 	},
 	"devDependencies": {
 		"nativescript-dev-webpack": "1.0.1"
-	}
+	},
+	"resolutions": 
+	{ "serialize-javascript": "^2.1.1" }
 }
