--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
 	"devDependencies": {
 		"nativescript-dev-webpack": "1.0.1"
 	},
-	"resolutions": 
-	{ "serialize-javascript": "^2.1.1" }
+	"resolutions": {
+		 "serialize-javascript": "^2.1.1" }
 }
