--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
 		"email-validator": "^2.0.4",
 		"nativescript-social-share": "^1.6.0",
 		"nativescript-theme-core": "~1.0.4",
+		"serialize-javascript": "^4.0.0",
 		"tns-core-modules": "6.0.1"
 	},
 	"devDependencies": {
 		"nativescript-dev-webpack": "1.0.1"
 	},
 	"resolutions": {
-		 "serialize-javascript": "^2.1.1" }
+		"serialize-javascript": "^2.1.1"
+	}
 }
